Fix task list overflow

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100dvh;
     font-family: system-ui, sans-serif; 
     overflow: hidden;
 }
@@ -106,10 +106,14 @@ body {
     bottom: 0;
     background-color: var(--baby-powder);
     width: 100%;
-    height: calc(100dvh - 6rem);
+    height: 100%;
+    max-height: calc(100dvh - 6rem);
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     transition: transform 0.3s ease-out;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .instruction {
@@ -182,8 +186,16 @@ body {
     margin: 0 auto;
 }
 
+.project {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
+    overflow: hidden;
+}
+
 .task-list {
     list-style: none;
+    overflow: scroll;
 }
 
 .task {
@@ -252,7 +264,7 @@ body {
         z-index: 0;
         padding: 50px;
         border-radius: 0;
-        height: 100%;
+        max-height: 100%;
     }
 
     .task {
@@ -286,7 +298,8 @@ body {
         transform: scale(1.1);
     }
 
-    .project {
+    .project, .task-form {
         width: 100%;
+        padding: 0;
     }
 } 
